# cplusplus-logging

./: CMakeLists.txt  README.md
include/logging/: common.hpp
include/logging/simple/: simple_logging.hpp
src/: CMakeLists.txt
src/simple/: CMakeLists.txt  simple_logging.cpp
